--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1 class = maintitle>naisuのサイトだよ！</h1>
-    <p class = main-text>こんにちは！</p>
+    <p class = main-text>こんにちは！！</p>
   </body>
 </html>
