--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S9ZY2T9M0Z"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-S9ZY2T9M0Z');
+    </script>
+    <!--Google Tag finish -->
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>naisuのサイト</title>
   </head>
   <body>
-    <h1 class = maintitle>naisuのサイトだよ！</h1>
-    <p class = main-text>こんにちは！！</p>
+    <h1 class = maintitle>naisuのサイト</h1>
+    <p class = main-text>こんにちは！</p>
+    <ol>
+      <li><p>twitter-main</p><a href = "https://twitter.com/naisu_dayo">ないす</a></li>
+      <li><p>twitter-dev</p><a href = "https://twitter.com/naisu_dev_dayo">naisuの管理者☆</a></li>
+      <li><p>github</p><a href = "https://github.com/naisu-dev">naisu-dev (nice)</a></li>
+      <li><p>discord</p><p class = disc-name>naisuって呼んで#1354</p></li>
+    </ol>
   </body>
 </html>
