--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     gtag('config', 'G-S9ZY2T9M0Z');
     </script>
-    <!--Google Tag finish -->
+    <!--Google tag finish -->
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>naisuのサイト</title>
@@ -19,10 +19,10 @@
     <h1 class = maintitle>naisuのサイト</h1>
     <p class = main-text>こんにちは！</p>
     <ol>
-      <li><p>twitter-main</p><a href = "https://twitter.com/naisu_dayo">ないす</a></li>
-      <li><p>twitter-dev</p><a href = "https://twitter.com/naisu_dev_dayo">naisuの管理者☆</a></li>
-      <li><p>github</p><a href = "https://github.com/naisu-dev">naisu-dev (nice)</a></li>
-      <li><p>discord</p><p class = disc-name>naisuって呼んで#1354</p></li>
+      <li><p class = jiko>twitter-main</p><a class = url href = "https://twitter.com/naisu_dayo" target = "_blank">ないす</a></li>
+      <li><p class = jiko>twitter-dev</p><a class = url href = "https://twitter.com/naisu_dev_dayo" target = "_blank">naisuの管理者☆</a></li>
+      <li><p class = jiko>github</p><a class = url href = "https://github.com/naisu-dev" target = "_blank">naisu-dev (nice)</a></li>
+      <li><p class = jiko>discord</p><p class = url class = disc-name>naisuって呼んで#1354</p></li>
     </ol>
   </body>
 </html>
