--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!--Google tag finish -->
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="icon.ico">
     <title>naisuのサイト</title>
   </head>
   <body>
@@ -24,5 +25,6 @@
       <li><p class = jiko>github</p><a class = url href = "https://github.com/naisu-dev" target = "_blank">naisu-dev (nice)</a></li>
       <li><p class = jiko>discord</p><p class = url class = disc-name>naisuって呼んで#1354</p></li>
     </ol>
+    <h2><a class = url href = "mine-command/list.html">コマンド</h2>
   </body>
 </html>
