--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </script>
     <!--Google tag finish -->
     <meta charset="utf-8">
+    <meta name="description" content="naisuuのさいとです！">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.ico">
     <title>naisuのサイト</title>
