--- a/pyscript/py-test.html
+++ b/pyscript/py-test.html
@@ -2,8 +2,10 @@
 <html lang="ja" dir="ltr">
   <head>
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css">
+    <link rel="icon" href="../icon.ico">
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
     <meta charset="utf-8">
+    <meta name="description" content="naisuuのさいとです！pyscriptテスト">
     <title></title>
   </head>
   <body>
